fix blog align issue

--- a/src/pages/splash/Splash.css
+++ b/src/pages/splash/Splash.css
@@ -25,7 +25,7 @@ body {
   transition: all 0.25s linear;
   height: 100%;
   width: 100%;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
+  background: radial-gradient(ellipse at bottom, #3c434c 0%,#090a0f 100%);
   /* background: black; */
 }
 
